# ec2-linux-host-metrics

./: LICENSE  Makefile  README.md  ec2-linux-host-metrics.cabal  stack.yaml
data/: cpuinfo1  df1  loadavg1  meminfo1  netstat1  ntpq1  snmp1  stat1
src/: App.hs  Args.hs  CPUInfo.hs  Df.hs  FileDiff.hs  Loadavg.hs  Main.hs  Meminfo.hs  NetStat.hs  Ntp.hs  Parse.hs  Stat.hs  Types.hs
test/: Test.hs
