name:                ec2-linux-host-metrics
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/gilt/ec2-linux-host-metrics#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          akartashov@gilt.com
copyright:           Copyright: (c) 2017 GILT GROUPE, INC.
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ec2-linux-host-metrics
  hs-source-dirs:      src

  main-is:             Main.hs

  other-modules:       Args
                       App
                       Df
                       Types

  build-depends:       base
                     , aeson
                     , amazonka
                     , amazonka-cloudwatch
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , gitrev
                     , lens
                     , monad-control
                     , monad-logger
                     , monad-loops
                     , mtl
                     , optparse-applicative
                     , resourcet
                     , shell-conduit
                     , split
                     , text
                     , transformers
                     , transformers-base
                     , utf8-string

  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-orphans -threaded


test-suite test

  type:                exitcode-stdio-1.0

  hs-source-dirs:      src test

  main-is:             Test.hs

  other-modules:       Args
                       App
                       Df
                       Types

  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , mtl
                     , shell-conduit
                     , split
                     , test-framework
                     , test-framework-hunit
                     , text

  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-orphans -Wno-missing-signatures
